--- a/templates/index.html
+++ b/templates/index.html
@@ -437,6 +437,9 @@ textarea.input {
                 <li>
                   Badal Singh Rajput (1902250100044)
                 </li>
+                <li>
+                  Md Sibgatullah Amir (1902250100082)
+                </li>
               </ui></p>
             </div>
             </div>
